--- a/src/Containers/HomeLayout/GreetingSection/GreetingSection.css
+++ b/src/Containers/HomeLayout/GreetingSection/GreetingSection.css
@@ -1,4 +1,4 @@
-section{
+section {
     width: 100vw;
     height: 55vh;
     background-repeat: inherit;
@@ -6,17 +6,29 @@ section{
     justify-content: center;
     align-items: center;
     background-position: center;
-    background-size:cover;
+    background-size: cover;
     color: #7a7a7a;
     min-height: 340px;
 }
 
-.section-input{
+.section-input {
     border-radius: 7px;
     background-color: #f5f5f5;
 }
+
 .section-input:active,
 .section-input:hover,
-.section-input:focus{
+.section-input:focus {
     background: #fff;
+}
+
+.greet-wrapper{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+@media only screen and (max-width: 900px) {
+    .section-input {
+    }
 }
