--- a/src/Containers/DetailPost/DetailPost.css
+++ b/src/Containers/DetailPost/DetailPost.css
@@ -71,9 +71,12 @@
     margin: 0 10px;
     cursor: pointer;
     text-align: center;
+    color: #999;
+    transition: 0.3s;
 }
 
 .download-container{
+    transition: 0.3s;
     padding: 5px;
     cursor: pointer;
     display: flex;
@@ -86,4 +89,14 @@
 .likes-download-wrapper {
     color: #999;
     display: flex;
+}
+
+.bottom-container{
+    display: block;
+}
+
+.likes-container:hover,
+.download-container:hover{
+    border: 1px #000 solid;
+    color: #000;
 }
