--- a/src/Components/Feed/Feed.css
+++ b/src/Components/Feed/Feed.css
@@ -6,3 +6,11 @@ section {
     justify-content: center;
 }
 
+.example-appear {
+    opacity: 0.01;
+  }
+  
+  .example-appear.example-appear-active {
+    opacity: 1;
+    transition: opacity .5s ease-in;
+  }
