--- a/src/Containers/HomeLayout/GreetingSection/GreetingSection.css
+++ b/src/Containers/HomeLayout/GreetingSection/GreetingSection.css
@@ -29,26 +29,9 @@ section {
 }
 
 @media only screen and (max-width: 900px) {
+    section {
+        text-align: center;
+    }
+
     .section-input {}
-}
-
-.carousel-appear {
-    opacity: 0.01;
-    transform: translateX(-100%);
-}
-
-.carousel-appear.carousel-appear-active {
-    transform: translateX(0%);
-    opacity: 1;
-    transition: .6s ease-in;
-}
-.formAnimation-appear {
-    opacity: 0.01;
-    transform: translateX(200%)
-}
-
-.formAnimation-appear.formAnimation-appear-active {
-    transform: translateX(0%);
-    opacity: 1;
-    transition: .6s ease-in;
 }
