--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -3,19 +3,19 @@ header {
     background-color: #fff;
     height: 16vh;
     min-height: 80px;
-    box-shadow: 0 4px 12px rgba(0,0,0,.08), 0 0 1px rgba(1,0,0,.1);
+    box-shadow: 0 4px 12px rgba(0, 0, 0, .08), 0 0 1px rgba(1, 0, 0, .1);
     position: fixed;
-    top:0;
+    top: 0;
     z-index: 10;
 }
 
-.logo{
+.logo {
     font-weight: 800;
     color: #111;
     font-size: 1.6em;
 }
 
-input{
+input {
     width: 60vw;
     outline: none;
     border-radius: 20px;
@@ -26,10 +26,10 @@ input{
     padding-left: 3%;
     color: #111;
     margin-bottom: 10px;
-    transition: .5ms ;
+    transition: .5ms;
 }
 
-nav{
+nav {
     width: 100%;
     height: 26%;
     position: absolute;
@@ -37,25 +37,79 @@ nav{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    transition: .5s ease-in-out;
 }
 
 nav a {
     font-size: 1em;
+    transition: .5s ease-in-out;
 }
 
-nav > a.active,
-nav > a:hover,
-nav > a:active{
+nav>a.active,
+nav>a:hover,
+nav>a:active {
     border-bottom: 1px #111 solid;
     color: #111
 }
 
 
-.searchWrapper{
+.searchWrapper {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
     padding: 10px;
     box-sizing: border-box;
+    transition: .5s ease-in-out;
+}
+
+.menu {
+    display: none;
+    border-radius: 50%;
+    transition: .3s ease-in-out;
+    z-index: 400;
+}
+
+.vertical{
+    transform: rotate(90deg)
+    translateX(15%);
+    font-weight: bold;
+}
+
+.menu:hover {
+    color: #333;
+}
+
+@media(max-width:800px) {
+    .searchWrapper {
+        height: 50%;
+        padding-top: 30px;
+    }
+
+    nav {
+        display: none;
+    }
+
+    header {
+        min-height: 6vh;
+        max-height: 6vh;
+        position: relative;
+    }
+
+    .logo {
+        font-size: 1em;
+    }
+
+    input {
+        padding-left: 30px;
+        width: 80%;
+        height: 70%;
+    }
+
+    .menu {
+        padding-right: 20px;
+        display: block;
+        font-size: 2em;
+        cursor: pointer;
+    }
 }
