--- a/src/Components/Models/SinglePost/SinglePost.css
+++ b/src/Components/Models/SinglePost/SinglePost.css
@@ -1,9 +1,10 @@
 .post {
-    margin: 2.5%;
+    margin: 0.7vw;
     display: block;
     position: relative;
-    height: 25vw;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, .08), 0 0 1px rgba(1, 0, 0, .1);
+    width: 24vw;
+    height: 50vh;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08), 0 0 1px rgba(1, 0, 0, 0.1);
 }
 
 .post:hover .likes-wrapper,
@@ -23,7 +24,7 @@
     align-items: center;
     justify-content: center;
     width: 15%;
-    background-color: hsla(0, 0%, 100%, .85);
+    background-color: hsla(0, 0%, 100%, 0.85);
     height: 5.5%;
     top: 3%;
     right: 7%;
@@ -42,7 +43,7 @@ img {
 }
 
 .mask {
-    background-color: rgba(0, 0, 0, .6);
+    background-color: rgba(0, 0, 0, 0.6);
     z-index: 3;
     width: 100%;
     height: 100%;
@@ -60,7 +61,7 @@ img {
     position: absolute;
     bottom: 7%;
     right: 10%;
-    background-color: hsla(0, 0%, 100%, .85);
+    background-color: hsla(0, 0%, 100%, 0.85);
     width: 12%;
     display: none;
     justify-content: center;
@@ -78,7 +79,7 @@ img {
 }
 
 .time {
-    font-size: .7em;
+    font-size: 0.7em;
 }
 
 .download-wrapper:hover,
@@ -89,13 +90,14 @@ img {
 @media only screen and (max-width: 900px) {
     .post {
         width: 35vw;
-        height: 25vh;
+        height: auto;
+        margin-top: 6%;
     }
 }
 
 @media only screen and (max-width: 600px) {
     .post {
-        width: 55vw;
+        width: 75vw;
     }
 }
 
@@ -107,5 +109,5 @@ img {
 .postAnimation-appear.postAnimation-appear-active {
     transform: translateX(0%);
     opacity: 1;
-    transition: .6s ease-in-out;
+    transition: 0.6s ease-in-out;
 }
